<resources>
    <string name="app_name">ColorApp3</string>
    <string name="jugar">Jugar</string>
    <string name="puntuacion">Puntuación</string>
    <string name="configuracion">Configuración</string>
    <string name="correctas">Correctas</string>
    <string name="porcentaje">Porcentaje</string>
    <string name="incorrectas">Incorrectas</string>

    <string name="pcorrectas">Palabras Correctas</string>
    <string name="pincorrectas">Palabras Incorrectas</string>
    <string name="pporcentaje">Porcentaje de reacciòn</string>

    <string name="estilodejuego">Estilo de Juego</string>
    <string name="tiempodepalabra">Tiempo de la palabra</string>
</resources>
