<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".controllers.MenuJ">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="171dp"
        android:layout_height="141dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="294dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        app:cardElevation="8dp"
        app:contentPadding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="jugar"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:layout_weight="2"
                android:src="@drawable/play" />

            <TextView
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:gravity="left|center"
                android:text="@string/jugar"
                android:textColor="@color/colorAmarillo"
                android:textSize="24sp" />

        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="294dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        app:cardElevation="8dp"
        app:contentPadding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:layout_weight="2"
                android:src="@drawable/puntuacionc" />

            <TextView
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:gravity="left|center"
                android:text="@string/puntuacion"
                android:textColor="@color/colorAmarillo"
                android:textSize="24sp" />
        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="294dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        app:cardElevation="8dp"
        app:contentPadding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:layout_weight="2"
                android:src="@drawable/configuracion" />

            <TextView
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:gravity="left|center"
                android:text="@string/configuracion"
                android:textColor="@color/colorAmarillo"
                android:textSize="24sp" />

        </LinearLayout>


    </android.support.v7.widget.CardView>




</android.support.constraint.ConstraintLayout>